* stephan: changed the flags of g_damageBonusOpts and added
           g_damageBonusNearMedics and g_damageBonusTotalMedics. See docs
* stephan: changed g_spoofOptions again. Some of the old flags are not optional
           anymore. This prevents the innocent guidspoofkick many people were
           experiencing. Furthermore an empty IP field is not allowed anymore.
           Default value set to 3* pheno:   fixed xpsave [serverstat] parse error on distance_variance
* pheno:   added et.ClientIsFlooding() library call to Lua API. This function
           only checks for flooding, necessary fields are not updated!
* pheno:   made more Lua API additions
* pheno:   added read-only access to gentity fields
* pheno:   added SHA-1 routines
* pheno:   fixed Lua's et.G_Print()/et.G_LogPrint() library call on et_Print()
           callback server crash bug
* pheno:   added et.G_shrubbot_permission( ent, flag ) library call to Lua API
* pheno:   added lua_allowedModules: If set, only lua modules with the matching
           sha-1 signatures listed in this cvar will be allowed to load
* pheno:   fixed LUA_PATH to ease use of the require() function
* pheno:   Lua API: added RW access to gentity field sess.ignoreClients
* pheno:   Lua API: added et.G_AddSkillPoints( ent, skill, points )
           library call
* pheno:   Lua API: added RO access to gentity field sess.skillpoints
* pheno:   Lua API: added et.G_shrubbot_level( ent ) library call
* pheno:   Lua API: added RW access to missing s.eventParm gentity field
* pheno:   Lua API: fixed and registered et.G_TempEntity() library call
* pheno:   Lua API: added error handling for getting or setting nonexistent
           gentity fields
* pheno:   added mcwf's code for additional font characters from 0x7F to 0xFF
* pheno:   Lua API: fixed et_Print() callback won't run on G_LogPrintf()
* pheno:   hopefully fixed the bug that keeps XPSave from loading stored XP
           at the time of client initial connect